@@ -1,3 +1,4 @@
+* FEA#6950 Ajout de données relatives au quittances payées dans le moteur de règles
 * BUG#6709 Correctif du batch de définition des numéro de quittance en accord avec la fusion 4.4
 * BUG#6732 Ajout d'un paramètre sur le journal de paiement pour définir si la suspension de paiement s'applique
 * BUG#5290 Génération des quittances pour les contrats jamais quittancés
